--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,3 +1,78 @@
-<p>
-  search works!
-</p>
+
+<div class="container-body">
+  
+    <div class="row">
+      <div class="col-md-12">
+        <form class="well">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="username" [(ngModel)]="username" name="username" (keyup)="findProfile()">
+          </div>
+        </form>
+      </div>
+    </div>
+    
+  
+    <div *ngIf="user">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title" style="font-size: 20px;"><strong>GitHub Name: {{user.name}}</strong></h3>
+        </div>
+        <div class="panel-body">
+          <div class="row">
+            <div class="col-md-4 col-sm-4 col-xs-12">
+              <img class="img-thumbnail" src="{{user.avatar_url}}">
+              <a class="btn btn-default btn-block" target="_blank" href="{{user.html_url}}">View Profile</a>
+            </div>
+  
+            <div class="col-md-5 col-sm-5 col-xs-12">
+              <div class="stats">
+                <p>{{user.bio}}</p>
+                <span class="badge badge-secondary">{{user.public_repos}} Public Repos</span>
+                <span class="badge badge-primary">{{user.followers}} Followers</span>
+                <span class="badge badge-success">{{user.following}} Following</span>
+                <span class="badge badge-danger">{{user.company}}</span>
+                <span class="badge badge-secondary">{{user.type}}</span>
+              </div>
+              <br/>
+              <ul class="list-group">
+                <li class="list-group-item">
+                  <strong>Username: </strong>{{user.name}}
+                </li>
+                <li class="list-group-item">
+                  <strong>Location: </strong>{{user.location}}
+                </li>
+                <li class="list-group-item">
+                  <strong>Email: </strong>{{user.email}}
+                </li>
+                <li class="list-group-item">
+                  <strong>Member Since: </strong>{{user.created_at}}
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container" style="padding: right 400px;">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h2 class="panel-title" style="text-align:center"><b>User Repos</b></h2>
+          </div>
+          <div class="panel-body">
+            <div *ngFor="let repo of repos">
+              <div class="row">
+                <div class="col-md-9">
+                  <h4>
+                <a target="_blank" href="{{repo.html_url}}">{{repo.name}}</a>
+              </h4>
+                  <p>{{repo.description}}</p>
+                </div>
+               
+              </div>
+              <hr>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
