added search input

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -36,13 +36,13 @@
               <br/>
               <ul class="list-group">
                 <li class="list-group-item">
-                  <strong>Username: </strong>{{user.name}}
+                  <b>Username: </b>{{user.name}}
                 </li>
                 <li class="list-group-item">
-                  <strong>Location: </strong>{{user.location}}
+                  <b>Location: </b>{{user.location}}
                 </li>
                 <li class="list-group-item">
-                  <strong>Email: </strong>{{user.email}}
+                  <b>Email: </b>{{user.email}}
                 </li>
                 <li class="list-group-item">
                   <strong>Member Since: </strong>{{user.created_at}}
