--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -21,15 +21,15 @@
           <div class="row">
             <div class="col-md-4 col-sm-4 col-xs-12">
               <img class="img-thumbnail" src="{{user.avatar_url}}">
-              <a class="btn btn-default btn-block" target="_blank" href="{{user.html_url}}">View Profile</a>
+             <button> <a class="btn btn-default btn-block" target="_blank" href="{{user.html_url}}">View Profile</a></button>
             </div>
   
             <div class="col-md-5 col-sm-5 col-xs-12">
               <div class="stats">
                 <p>{{user.bio}}</p>
-                <span class="badge badge-secondary">{{user.public_repos}} Public Repos</span>
-                <span class="badge badge-primary">{{user.followers}} Followers</span>
-                <span class="badge badge-success">{{user.following}} Following</span>
+                <span class="btn btn-secondary">{{user.public_repos}} Public Repos</span>
+                <span class="btn btn-primary">{{user.followers}} Followers</span>
+                <span class="btn btn-success">{{user.following}} Following</span>
                 <span class="badge badge-danger">{{user.company}}</span>
                 <span class="badge badge-secondary">{{user.type}}</span>
               </div>
