added apiUrl link

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -27,11 +27,11 @@
             <div class="col-md-5 col-sm-5 col-xs-12">
               <div class="stats">
                 <p>{{user.bio}}</p>
-                <span class="btn btn-secondary">{{user.public_repos}} Public Repos</span>
-                <span class="btn btn-primary">{{user.followers}} Followers</span>
-                <span class="btn btn-success">{{user.following}} Following</span>
-                <span class="badge badge-danger">{{user.company}}</span>
-                <span class="badge badge-secondary">{{user.type}}</span>
+                <div class="btn btn-secondary">{{user.public_repos}} Public Repos</div>
+                <div class="btn btn-secondary">{{user.followers}} Followers</div>
+                <div class="btn btn-secondary">{{user.following}} Following</div>
+                <div class="badge badge-secondary">{{user.company}}</div>
+                <div class="btn btn-secondary">{{user.type}}</div>
               </div>
               <br/>
               <ul class="list-group">
