added backround color

--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -2,3 +2,12 @@
     width: 30%;
     color:gray;
 }
+.form{
+    padding-bottom: 40opx;
+}
+.container{
+    background: linear-gradient(to right, #603813, #b29f94);
+}
+.header{
+    text-align: center;
+}
