--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,5 +1,6 @@
 
-<div class="container-body">
+<div class="container">
+  <h1 class='header'>GH-SEARCH</h1>
   
     <div class="row">
       <div class="col-md-12">
@@ -25,13 +26,13 @@
             </div>
   
             <div class="col-md-5 col-sm-5 col-xs-12">
-              <div class="stats">
+              <div class="form">
                 <p>{{user.bio}}</p>
-                <div class="btn btn-secondary">{{user.public_repos}} Public Repos</div>
-                <div class="btn btn-secondary">{{user.followers}} Followers</div>
-                <div class="btn btn-secondary">{{user.following}} Following</div>
+                <div class="btn btn-primary">{{user.public_repos}} Public Repos</div>
+                <div class="btn btn-primary">{{user.followers}} Followers</div>
+                <div class="btn btn-primary">{{user.following}} Following</div>
                 <div class="badge badge-secondary">{{user.company}}</div>
-                <div class="btn btn-secondary">{{user.type}}</div>
+                <div class="btn btn-primary">{{user.type}}</div>
               </div>
               <br/>
               <ul class="list-group">
