added color to the html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
- <!-- <h1>GH-SEARCH</h1> -->
+ <h1>GH-SEARCH</h1>
  <!-- <img src ='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRlYSQTo8pqig43vSELrJfa9LgbdRyUNNwXa8jPYs2fmcfYWl3ZVQ'>   -->
 
  <app-search></app-search>
