added followers and the following to my gh-search

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -24,7 +24,7 @@
           <div class="col-md-4 col-sm-4 col-xs-12">
             <img class="img-thumbnail" src="{{user.avatar_url}}">
             <div>
-              <button><a class="btn btn" target="_blank" href="{{user.html_url}}">View Repos</a></button>
+              <button><a class="btn btn" target="_blank" href="{{user.html_url}}">GH-ACCOUNT</a></button>
             </div>I
           </div>
 
