--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -9,7 +9,7 @@
           <div class="form-group">
             <input type="text" class="form-control" placeholder="username" [(ngModel)]="username" name="username"
               (keyup)="findProfile()">
-            <button (click)="searchUser()" class="btn btn-info"><span><i class="fas fa-search"></i></span></button>
+            <button  class="btn btn-info"><span><i class="fas fa-search"></i></span></button>
           </div>
         </form>
       </div>
@@ -53,7 +53,8 @@
                 <li class="list-group-item">
                   <strong>Member Since: </strong>{{user.created_at}}
                 </li>
-              </ul>
+              </ul>￼
+
             </div>
           </div>
         </div>
